<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">

    <string name="app_name">GameBooster</string>
    <string name="use_memory">%1$s memory in use</string>
    <string name="end_boost">%1$s boost is active.  Do you want to end \n boost?</string>
    <string name="add_game">Add game</string>
    <string name="couchgram_pr_comment">The camera will catch whoever touched your phone!</string>
    <string name="delete_app_list">Delete list</string>
    <string name="unistall_app">Uninstall app</string>
    <string name="setting">Settings</string>
    <string name="add_shortcut">Add shortcut</string>
    <string name="share">Share</string>
    <string name="ultra_mode_setting">Ultra Mode settings</string>
    <string name="noti_setting">Notification Settings</string>
    <string name="noti_off">You will not be receiving notifications during game.</string>
    <string name="silent_mode_title">Silent Mode</string>
    <string name="silent_mode_desc">Set your ringtone or vibration silent during game.</string>
    <string name="call_setting_gameplay">Call settings during gameplay</string>
    <string name="call_screen_widow_mode">Display smaller call screen</string>
    <string name="disconnect_call_mode">Reject incoming call and notify</string>
    <string name="add_shortcut_desc">Add a shortcut folder on your home screen to use it more conveniently! Do you want to add it?</string>
    <string name="unknown_number">Unknown number</string>
    <string name="noti">Notification</string>
    <string name="perms_boost">Please grant permission to run game boost.</string>
    <string name="accessibility_desc">Set this feature to enjoy the following features and improve device performance.\n
- Display smaller call screen during game\n
- Play without interruption after connecting a call.\n
- Set your ringtone silent when connecting a call during game.\n
- Stop receiving notifications during game.\n
- Improved boosting speed\n

A privacy warning notification may appear. \nThis is the standard procedure that all Android OSs send when you enable accessibility permissions. \nThe Ultra Game Boost does not collect any personal information.


</string>
    <string name="perms_noti_desc">Please grant permission to run notification-off mode.</string>
    <string name="perms_call_widow_mode_desc">Please allow the following permissions. \n
- Drawing over other apps \n
- Status notifications \n
</string>
    <string name="perms_silent_mode_desc">Please grant permission to run silent mode.</string>
    <string name="hot_game_desc">Wanna see what games are HOT this week?</string>
    <string name="end_boosting_desc">Are you sure you want to end %1$s boosting?</string>
    <string name="noti_boosting_desc">%1$s boosting in progress.</string>
    <string name="share_title">Share with friends</string>
    <string name="perms_req_use_feature">Permission is required to use this feature.</string>
    <string name="req_perms">Required permission</string>
    <string name="find_active_gamebooster">Find and activate the Game Booster!</string>
    <string name="active_pharse">Activate by phase</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="finish">Finish </string>
    <string name="close">Close</string>
    <string name="add">Add</string>
    <string name="install">install</string>
    <string name="game_optimize">Game optimization</string>
    <string name="perms_disconnect_call">Please grant permission to run Reject Incoming Calls Automatically and Notify feature.</string>
    <string name="privacy_lbl_share_sns">Ultra boosting from start to finish! \nEnjoy the game more without lag! \n\Download: https://goo.gl/TVtr4J</string>
    <string name="game_folder">Game Folder</string>
</resources>
