<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_more"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/img_main_menu"
        android:title="More">
        <menu>
            <item
                android:id="@+id/action_delete"
                android:title="@string/delete_app_list"
                android:icon="@drawable/ic_menu_delete"
                app:showAsAction="always"/>
            <item
                android:id="@+id/action_uninstall"
                android:title="@string/unistall_app"
                android:icon="@drawable/ic_menu_application_delete"
                app:showAsAction="always"/>
            <item
                android:id="@+id/action_setting"
                android:title="@string/setting"
                android:icon="@drawable/ic_menu_setting"
                app:showAsAction="always"/>
            <item
                android:id="@+id/action_shortcut"
                android:title="@string/add_shortcut"
                android:icon="@drawable/ic_menu_shortcut"
                app:showAsAction="always"/>
            <item
                android:id="@+id/action_share"
                android:title="@string/share"
                android:icon="@drawable/ic_menu_share"
                app:showAsAction="always"/>
        </menu>
    </item>
</menu>