<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A6000000">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/call_window_mode_step_top"
        android:layout_width="123dp"
        android:layout_height="50dp"
        android:background="@drawable/img_tutorial_text_bg"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/call_window_mode_step_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/white"
            android:text="@string/active_pharse"
            android:layout_marginTop="3dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/call_window_mode_step_img"
            app:layout_constraintVertical_chainStyle="spread"/>
        <ImageView
            android:id="@+id/call_window_mode_step_img"
            android:layout_width="46dp"
            android:layout_height="18dp"
            android:background="@drawable/img_tutorial_number_1"
            android:layout_marginBottom="3dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/call_window_mode_step_title"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:layout_width="310dp"
        android:layout_height="262dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/call_window_mode_step_top">
        <FrameLayout
            android:id="@+id/title_layout"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:background="@drawable/bg_toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/find_active_gamebooster"/>
        </FrameLayout>
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/title_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:lottie_imageAssetsFolder="images"
            app:lottie_fileName="json/setting_permissions.json"/>
        <Button
            android:id="@+id/btn_close"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:text="@string/close"
            android:textColor="@color/white"
            android:background="@drawable/bg_accessibility_btn"
            android:layout_marginTop="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animation_view"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>